# stm32-uart-dfu

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  stm32_uart_dfu.py  stm32uartdfu.py  test_dfu.py  uart-dfu.py
memory_map/: STM32F410Bx.json  stm32f407.json  stm32f446xx.json
stm32-uart-dfu/: exceptions.py  stm32uartdfu.py  uart-dfu.py
stm32_uart_dfu/: __main__.py  exceptions.py  stm32uartdfu.py  uart_dfu.py
tests/: test_dfu.py
