[tool.poetry]
name = "stm32-uart-dfu"
version = "0.1.0"
description = "Simple cli python3 tool for working with stm32 dfu"
authors = ["ABCDeath <cob19721@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
