[tool.poetry]
name = "stm32-uart-dfu"
version = "1.0.0"
description = "Simple cli python3 tool for working with stm32 dfu"
authors = ["ABCDeath <cob19721@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8.20"
pyserial = "^3.5"


[tool.poetry.group.dav.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
flake8-quotes = "^3.4.0"
flake8-broken-line = "^1.0.0"
flake8-eradicate = "^1.5.0"
flake8-pep3101 = "^2.1.0"
flake8-import-order = "^0.18.2"
flake8-isort = "^6.1.1"
pep8-naming = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
